docs(readme): add run with .jar file instructions to readme